static/css/base.css
#btndiv {
    text-align: center;
}

#btndiv a {
    margin-left: 5px;
    margin-right: 5px;
}

#contBTN {
    margin: 2em;
}

#delbtn, #editbtn {
    margin: 10px 0 10px 0;
}

#id_login {
    width: auto;
}

#qa_div {
    border: 1px solid black;
    border-radius: 3em;
    text-align: center;
    margin-top: 5em;
    height: 25em;
    background-color: white;
}

#search {
    border-radius: 10px;
}

#timer {
    float: left;
    display: inline-block;
}

#welcome {
    text-align: center;
}

.bodyblock {
    min-height: 100%;
}

.btn-center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.btn-wide {
    width: 50%;
}

.clickable-row:hover {
    cursor: pointer;
}

.correct {
    -webkit-box-shadow: 0px 0px 17px 8px rgba(93,186,108,1);
    -moz-box-shadow: 0px 0px 17px 8px rgba(93,186,108,1);
    box-shadow: 0px 0px 17px 8px rgba(93,186,108,1);
}

.fullwidth {
    width: 100%;
}

.navbar {
    background-color: #3385FF;
    border: 0px;
    margin: 0px;
}

.navbar-default .navbar-nav li a {
    color: #EEE;
    font-size: 1.2em;
}

.navbar-default .navbar-nav li a:active {
    background-color: #296ACC;
}

.navbar-default .navbar-nav li a:hover {
    color: #FFF;
    background-color: #3E79D1;
}

.navbar-default .navbar-nav .dropdown-menu li a:hover {
    color: white;
    background-color: #3385FF;
}

@media (max-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: #EEE;
    }

    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
        color: white;
    }
}

.navbar-right {
    padding-right: 15px;
}

.navbar-default .navbar-nav .dropdown-menu li a {
    color: black;
    font-size: 1em;
}

.navbar-default .navbar-nav > .open > a:focus {
    background-color: #296ACC;
    color: #FFF;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #DDD;
}

.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
    background-color: #61A1FF;
}

.site-masthead {
    background-color: #3385FF;
    margin-bottom: 1em;
}

.skill1 {
    background-color: #E42828;
}

.skill2 {
    background-color: #C56D15;
}

.skill3 {
    background-color: #BCBC00;
}

.skill4 {
    background-color: #00BC00;
}

.skill5 {
    background-color: blue;
    color: white;
}

.wrong {
    -webkit-box-shadow: 0px 0px 17px 8px rgba(161,5,10,1);
    -moz-box-shadow: 0px 0px 17px 8px rgba(161,5,10,1);
    box-shadow: 0px 0px 17px 8px rgba(161,5,10,1);
}

body {
    background-color: #F0F0F0;
    height: 100%;
}

footer {
    margin-top: 2em;
    height: 5em;
    background-color: #3385FF;
    bottom: 0px;
    position: relative;
    clear: both;
    width: 100%;
    color: #EEE;
}

footer a {
    color: #EEE;
}

html {
    height: 100%;
}

hr {
    border-color: #C3C3C3;
}

label {
    vertical-align: top;
    display: inline-block;
    width: 100%;
}

option {
    text-align: center;
    font-size: 1.3em;
}

select {
    width: 100%;
}

